<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.root.mobilequizz.Student"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="16dp"
        android:text="IP"
        app:layout_constraintBaseline_toBaselineOf="@+id/ip1"
        app:layout_constraintEnd_toStartOf="@+id/ip1"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ip1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:nextFocusDown="@id/ip2"
        app:layout_constraintBaseline_toBaselineOf="@+id/ip2"
        app:layout_constraintEnd_toStartOf="@+id/ip2"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <EditText
        android:id="@+id/ip2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:nextFocusDown="@id/ip3"
        app:layout_constraintEnd_toStartOf="@+id/ip3"
        app:layout_constraintStart_toEndOf="@+id/ip1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ip3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:nextFocusDown="@id/ip4"
        app:layout_constraintEnd_toStartOf="@+id/ip4"
        app:layout_constraintStart_toEndOf="@+id/ip2"
        app:layout_constraintTop_toTopOf="@+id/ip2" />

    <EditText
        android:id="@+id/ip4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBaseline_toBaselineOf="@+id/ip3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ip3" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:ems="10"
        android:hint="@string/student_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/student_password"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/editText6"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />
</android.support.constraint.ConstraintLayout>
